--- a/alpaka.tex
+++ b/alpaka.tex
@@ -18,12 +18,52 @@ die Gruppe \textit{Computergestützte Strahlenphysik} des
 Die Alpaka"=Bibliothek definiert eine abstrakte C++"=Schnittstelle, mit deren
 Hilfe parallele Programme geschrieben werden können. Im Hintergrund wird Alpaka
 auf hersteller- oder hardware"=spezifische Schnittstellen, wie CUDA oder OpenMP,
--- im Folgenden als \textit{Backend} bezeichnet -- abgebildet. Alpaka ist somit
+-- im Folgenden als \textit{Backend} bezeichnet -- abgebildet. Schematisch ist
+dies in Abbildung~\ref{alpaka:ueberblick:schema} dargestellt. Alpaka ist somit
 ein einheitliches Paket, das die abstrakte Schnittstelle nach außen und die
 konkrete Implementierung vereinigt. Damit unterscheidet sich die Bibliothek von
 ähnlichen Ansätzen wie OpenCL oder SYCL, die ebenfalls eine abstrakte
 Schnittstelle definieren, die Implementierung jedoch den Hardware- und
 Software"=Herstellern überlassen.
+
+\begin{figure}
+    \centering
+    \begin{tikzpicture}
+        \draw [rounded corners, fill = HKS33!70] (2.5, 3.5) rectangle (16, 5)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Alpaka}};
+
+        \draw [rounded corners, fill = HKS44!70] (0, 1.75) rectangle (2.25, 3.25)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Backends}};
+
+        \draw [rounded corners, fill = HKS44!70] (2.5, 1.75) rectangle (4.75, 3.25)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Sequentiell}};
+        \draw [rounded corners, fill = HKS44!70] (4.85, 1.75) rectangle (7.1, 3.25)
+               node [pos = 0.5, align = center] {\color{white}\textbf{OpenMP}};
+        \draw [rounded corners, fill = HKS44!70] (7.2, 1.75) rectangle (9.45, 3.25)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Boost}\\
+                                                \color{white}\textbf{Fiber}};
+        \draw [rounded corners, fill = HKS44!70] (9.55, 1.75) rectangle (11.8, 3.25)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Intel}\\
+                                                \color{white}\textbf{TBB}};
+        \draw [rounded corners, fill = HKS44!70] (11.9, 1.75) rectangle (13.9, 3.25)
+              node [pos = 0.5, align = center] {\color{white}\textbf{CUDA}};
+        \draw [rounded corners, fill = HKS44!70] (14, 1.75) rectangle (16, 3.25)
+              node [pos = 0.5, align = center] {\color{white}\textbf{HIP}};
+
+        \draw [rounded corners, fill = HKS41!70] (0, 0) rectangle (2.25, 1.5)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Hardware}};
+        \draw [rounded corners, fill = HKS41!70] (2.5, 0) rectangle (11.8, 1.5)
+              node [pos = 0.5, align = center] {\color{white}\textbf{x86, Xeon Phi, ARM, \ldots}};
+        \draw [rounded corners, fill = HKS41!70] (11.9, 0) rectangle (14.95, 1.5)
+              node [pos = 0.5, align = center] {\color{white}\textbf{NVIDIA}\\
+                                                \color{white}\textbf{GPU}};
+        \draw [rounded corners, fill = HKS41!70] (15.05, 0) rectangle (16, 1.5)
+              node [pos = 0.5, align = center] {\color{white}\textbf{AMD}\\
+                                                \color{white}\textbf{GPU}};
+    \end{tikzpicture}
+    \caption{Schematischer Aufbau der Alpaka-Bibliothek}
+    \label{alpaka:ueberblick:schema}
+\end{figure}
 
 Wie bei SYCL sind die Quelltexte für \textit{Host} und \textit{Device} nicht
 voneinander getrennt. Die Abbildung auf ein oder mehrere Backends erfolgt zur
@@ -33,10 +73,8 @@ Abstraktions"=Overhead zur Laufzeit vermieden wird.
 Ähnlich wie SYCL bietet auch Alpaka ein beschleunigerunabhängiges Backend, das
 sich prinzipiell mit jedem modernen C++"=Compiler kompilieren lässt. Dieses
 wird in der Alpaka"=Terminologie \texttt{CpuSerial} genannt und führt jeden
-Befehl seriell aus. Während der Kernel"=Ausführung existiert also keinerlei
-Parallelität. Daneben gibt es weitere Implementierungen für CPUs auf Basis des
-OpenMP"=Standards, der ebenfalls von den meisten modernen C++"=Compilern
-unterstützt wird.
+Befehl sequentiell aus. Während der Kernel"=Ausführung existiert also keinerlei
+Parallelität.
 
 \subsection{AXPY und Alpaka}\label{alpaka:ueberblick:axpy}
 
@@ -1145,3 +1183,94 @@ Verfügung. So lässt sich beispielsweise der CUDA"=Profiler \texttt{nvprof} fü
 das Profiling eines mit Alpaka auf NVIDIA"=Hardware portierten Programms
 verwenden, was mit den für NVIDIA"=GPUs existierenden SYCL"=Implementierungen
 nicht möglich ist.
+
+\subsection{Zusammenfassung}
+
+\begin{figure}
+    \centering
+    \begin{tikzpicture}
+        \draw [rounded corners, fill = HKS33!70] (0, 0) rectangle (2.5, 9.5)
+              node [pos = 0.5, align = center, rotate = 90] {\color{white}\textbf{Device}};
+        \draw [rounded corners, fill = HKS33!70] (0, 9.75) rectangle (2.5, 21.05)
+              node [pos = 0.5, align = center, rotate = 90] {\color{white}\textbf{Host}};
+        \draw [rounded corners, fill = HKS33!100] (0, 21.3) rectangle (2.5, 23.3)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Domäne}};
+
+        \draw [rounded corners, fill = HKS65!70] (2.75, 0) rectangle (3.825, 8.4)
+              node [pos = 0.5, align = center, rotate = 90] {\color{white}\textbf{Alpaka}};
+        \draw [rounded corners, fill = HKS65!70] (3.925, 0) rectangle (5.25, 8.4)
+              node [pos = 0.5, align = center, rotate = 90] {\color{white}\textbf{Nutzer}};
+        \draw [rounded corners, fill = HKS65!70] (2.75, 8.5) rectangle (5.25, 9.5)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Nutzer}};
+        \draw [rounded corners, fill = HKS65!70] (2.75, 9.75) rectangle (3.825, 21.05)
+              node [pos = 0.5, align = center, rotate = 90] {\color{white}\textbf{Alpaka}};
+        \draw [rounded corners, fill = HKS65!70] (3.925, 9.75) rectangle (5.25, 21.05)
+              node [pos = 0.5, align = center, rotate = 90] {\color{white}\textbf{Nutzer}};
+        \draw [rounded corners, fill = HKS65!100] (2.75, 21.3) rectangle (5.25, 23.3)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Ursprung}};
+
+        \draw [rounded corners, fill = HKS07!70] (5.5, 0) rectangle (8, 8.4);
+        \draw [rounded corners, draw = white, fill = HKS07!50] (5.6, 0.1) rectangle (7.9, 0.85)
+              node [pos = 0.5, align = center] {\color{white}\textbf{\ldots}};
+        \draw [rounded corners, draw = white, fill = HKS07!50] (5.6, 1.05) rectangle (7.9, 2.05)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Math}};
+        \draw [rounded corners, draw = white, fill = HKS07!50] (5.6, 2.15) rectangle (7.9, 3.15)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Rand}};
+        \draw [rounded corners, draw = white, fill = HKS07!50] (5.6, 3.25) rectangle (7.9, 4.25)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Atomic}};
+        \draw [rounded corners, draw = white, fill = HKS07!50] (5.6, 4.35) rectangle (7.9, 5.35)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Index}};
+        \draw [rounded corners, draw = white, fill = HKS07!50] (5.6, 5.45) rectangle (7.9, 6.45)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Work}\\
+                                                \color{white}\textbf{Division}};
+        \draw [rounded corners, draw = white, fill = HKS07!50] (5.6, 6.65) rectangle (7.9, 7.15)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Size}};
+        \draw [rounded corners, draw = white, fill = HKS07!50] (5.6, 7.25) rectangle (7.9, 7.75)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Dim}};
+        \node [align = center] (acctext) at (6.75, 8.10) {\color{white}\textbf{Accelerator}}; 
+        \draw [rounded corners, fill = HKS07!70] (5.5, 8.5) rectangle (8, 9.5)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Kernel}};
+        \draw [rounded corners, fill = HKS07!70] (5.5, 9.75) rectangle (8, 11.45);
+        \draw [rounded corners, draw = white, fill = HKS07!50] (5.6, 9.85) rectangle (7.9, 10.35)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Size}};
+        \draw [rounded corners, draw = white, fill = HKS07!50] (5.6, 10.45) rectangle (7.9, 10.95)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Dim}};
+        \node [align = center] (tasktext) at (6.75, 11.2) {\color{white}\textbf{Task}};
+        \draw [rounded corners, fill = HKS07!70] (5.5, 11.55) rectangle (8, 15.05);
+        \draw [rounded corners, draw = white, fill = HKS07!50] (5.6, 11.65) rectangle (7.9, 14.55);
+        \draw [rounded corners, draw = white, fill = HKS07!50] (5.7, 11.75) rectangle (7.8, 12.25)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Size}};
+        \draw [rounded corners, draw = white, fill = HKS07!50] (5.7, 12.35) rectangle (7.8, 12.85)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Dim}};
+        \draw [rounded corners, draw = white, fill = HKS07!50] (5.7, 12.95) rectangle (7.8, 13.45)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Extent}};
+        \draw [rounded corners, draw = white, fill = HKS07!50] (5.7, 13.55) rectangle (7.8, 14.05)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Offset}};
+        \node [align = center] (viewtext) at (6.75, 14.3) {\color{white}\textbf{View}};
+        \node [align = center] (buffertext) at (6.75, 14.8) {\color{white}\textbf{Buffer}};
+        \draw [rounded corners, fill = HKS07!70] (5.5, 15.15) rectangle (8, 16.25);
+        \draw [rounded corners, draw = white, fill = HKS07!50] (5.6, 15.25) rectangle (7.9, 15.75)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Waitable}};
+        \node [align = center] (eventtext) at (6.75, 16) {\color{white}\textbf{Event}};
+        \draw [rounded corners, fill = HKS07!70] (5.5, 16.35) rectangle (8, 17.45);
+        \draw [rounded corners, draw = white, fill = HKS07!50] (5.6, 16.45) rectangle (7.9, 16.95)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Waitable}};
+        \node [align = center] (eventtext) at (6.75, 17.2) {\color{white}\textbf{Event}};
+        \draw [rounded corners, fill = HKS07!70] (5.5, 17.55) rectangle (8, 18.65);
+        \draw [rounded corners, draw = white, fill = HKS07!50] (5.6, 17.65) rectangle (7.9, 18.15)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Waitable}};
+        \node [align = center] (eventtext) at (6.75, 18.4) {\color{white}\textbf{Queue}};
+        \draw [rounded corners, fill = HKS07!70] (5.5, 18.75) rectangle (8, 19.85);
+        \draw [rounded corners, draw = white, fill = HKS07!50] (5.6, 18.85) rectangle (7.9, 19.35)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Waitable}};
+        \node [align = center] (eventtext) at (6.75, 19.6) {\color{white}\textbf{Device}};
+        \draw [rounded corners, fill = HKS07!70] (5.5, 19.95) rectangle (8, 21.05)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Device}\\
+                                                \color{white}\textbf{Manager}};
+        \draw [rounded corners, fill = HKS07!100] (5.5, 21.3) rectangle (8, 23.3)
+              node [pos = 0.5, align = center] {\color{white}\textbf{Konzept}};
+
+    \end{tikzpicture}
+    \caption{Struktureller Aufbau der Alpaka"=Bibliothek}
+    \label{alpaka:konzepte:zusammenfassung:struktur}
+\end{figure}
